# veea

./: README.md  _codeql_detected_source_root
device/firmware/: CMakeLists.txt  Kconfig  README.md  prj.conf
device/firmware/boards/: xiao_esp32s3.overlay  xiao_esp32s3_esp32s3_procpu_sense.overlay
device/firmware/src/: ble_audio_service.c  ble_audio_service.h  i2s_esp32_pdm.c  main.c  mic_driver.c  mic_driver.h
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/android/app/src/main/: AndroidManifest.xml
mobile-app/android/app/src/main/kotlin/com/veea/veea_camera/: MainActivity.kt
mobile-app/ios/Runner/: Info.plist
mobile-app/ios/Runner.xcodeproj/: project.pbxproj
mobile-app/lib/: main.dart
mobile-app/lib/models/: captured_image.dart
mobile-app/lib/providers/: camera_provider.dart
mobile-app/lib/screens/: gallery_screen.dart  home_screen.dart  image_viewer_screen.dart  scan_screen.dart
mobile-app/lib/services/: ble_service.dart  image_service.dart
mobile-app/linux/: CMakeLists.txt
mobile-app/linux/runner/: my_application.cc
mobile-app/macos/Runner.xcodeproj/: project.pbxproj
mobile-app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile-app/macos/Runner/Configs/: AppInfo.xcconfig
mobile-app/test/: widget_test.dart
mobile-app/web/: index.html  manifest.json
mobile-app/windows/: CMakeLists.txt
mobile-app/windows/runner/: Runner.rc  main.cpp
veea/: Cargo.toml
veea/data/: config.toml  index.db
veea/src/: api.rs  capture.rs  config.rs  db.rs  error.rs  main.rs  search.rs
