[package]
name = "veea"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.3.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs"] }
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
xcap = "0.8.1"
